# invenio-subjects-cessda

./: .gitignore  CHANGES.md  MANIFEST.in  Makefile  README.md  main.py  pyproject.toml  requirements.txt  run-tests.sh  setup.cfg
.github/workflows/: pypi-publish.yaml  pypi-publish.yml  tests.yaml
invenio_subjects_cessda/: __init__.py  config.py  convert.py  delta.py  fetch_voc.py  schemas.py  utils.py  writer.py
invenio_subjects_cessda/vocabularies/: __init__.py  cessda_voc.yaml  cessda_voc_delta.json
tests/: __init__.py  conftest.py  data.py  fixtures.py  test_convert.py  test_delta.py  test_fetch_voc.py  test_main.py  test_package_data.py  test_schemas.py  test_utils.py  test_writer.py
