[metadata]
name= invenio-subjects-cessda
version = attr: invenio_subjects_cessda.__version__
description = invenio-subjects-cessda vocabularies
long_description_content_type= text/markdown
long_description = file:README.md, CHANGES.md
keywords=invenio inveniordm subjects cessda
license=MIT
author=KTH Royal Institute of Technology
author_email=info@kth.se
platforms=any,
url=https://github.com/Samk13/invenio-subjects-cessda
classifiers=
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3

[options]
include_package_data = True
packages = find:
python_requires = >=3.9
zip_safe = False

[options.extras_require]
tests =
    pytest-black-ng>=0.4.0
    pytest-invenio>=2.1.7
    aiohttp>=3.9.3
    click>=8.1.7
    PyYAML>=6.0.1
    wheel>=0.42.0

# exclude the fetching mechanisms and other unrelated parts from the package
# [options.packages.find]
# where = invenio_subjects_cessda
# include = invenio_subjects_cessda.vocabularies.*


[options.entry_points]
console_scripts =
    invenio-subjects-cessda = main:main
invenio_rdm_records.fixtures =
    invenio_subjects_cessda = invenio_subjects_cessda.vocabularies

[check-manifest]
ignore =
    .*-requirements.txt
    *.bin
    *.gitkeep

[bdist_wheel]
universal = 1

[tool:pytest]
addopts = --black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=invenio_subjects_cessda --cov-report=term-missing
filterwarnings = ignore::pytest.PytestDeprecationWarning
testpaths = tests invenio_subjects_cessda

[isort]
profile=black

[pydocstyle]
add_ignore = D401, E501, D100
